# nodal

./: .clang-format  .clang_complete  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  install_deps.sh  nodal-config.cmake.in
cmake/: ConfigureSourceDefinitions.cmake  EnableCXX14.cmake
examples/: CMakeLists.txt
examples/math_nodes/: CMakeLists.txt  compiler.cpp  compiler.h  compiler.hpp  context.h  context.hpp  main.cpp  node.h  node.hpp  node_factory.cpp  node_factory.h  node_factory.hpp
examples/math_nodes/cmake/: ConfigureSourceDefinitions.cmake  EnableCXX11.cmake
examples/math_nodes/nodes/: all.h  all.hpp  input.cpp  input.h  input.hpp  math.cpp  math.h  math.hpp  output.cpp  output.h  output.hpp  random.cpp  random.h  random.hpp
examples/type_usage/: CMakeLists.txt  main.cpp
include/: graph.h  graph_node.h  node.h
include/detail/: graph_access.h  graph_properties.h  link_list.h
include/nodal/: any.h  attribute.h  attribute.hpp  compiler.h  compiler.hpp  graph.h  graph.hpp  graph_link.h  graph_link.hpp  graph_node.h  graph_node.hpp  nodal.h  nodal.hpp  node.h  node.hpp  node_data.h  node_data.hpp  type.h  type.hpp  typed_node.h  typed_node.hpp  types.h  types.hpp
include/nodal/detail/: generic_type.h  generic_type.hpp  graph_access.h  graph_access.hpp  graph_properties.h  graph_properties.hpp  link_list.h  link_list.hpp  unused.hpp
include/nodal/passes/: cycle_detection.h  cycle_detection.hpp  dead_branch_removal.h  dead_branch_removal.hpp  depth_first_search.h  depth_first_search.hpp  topological_sort.h  topological_sort.hpp
src/: compiler.cpp  dllmain.c  graph.cpp  graph_link.cpp  graph_node.cpp  node_data.cpp  types.cpp
src/passes/: dead_branch_removal.cpp
